2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntry.h : DocEntry is now secure. User can't change the 
     DictEntry or the VR.

2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/ : change GDCM_DATA_PATH to GDCM_DATA_ROOT to be complient with
     all in gdcm

2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ : rename VTK tests to have a best name for the tests
   * gdcmPython/demo/*.py.in : Change the InitTraversal/GetNextEntry use to
     GetFirstEntry/GetNextEntry use

2005-01-18 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx, ShowDicomSeq.cxx, TestWriteWithVTK.cxx : change the
     test. Now it's on image content and not on the resulting visualisation...
     might solve the problem on linux when using the OpenGL drivers

2005-01-18 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * ENH for DicomDir, DicomDirPatient, DicomDirStudy, 
	          DicomDirSerie, DicomDirImage
	          Dict, DictSet classes :
         -add method GetFirstEntry to replace call to InitTraversal+GetNextEntry
         -remove InitTraversal method.
	* UPD Test programs + Example programs

2005-01-18 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   remove useless and never updated keyword \ingroup	      

2005-01-17 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmUtil.cxx : bug fix to find the Windows MAC address. Now, there
     is no memory access violation
   * gdcmPython/demo : add python demos using VTK

2005-01-16 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
	 * FIX 'Dictionnary' is now spelt 'Dictionary'
	       'wether' is now spelt 'whether'
			 'archieve' is now spelt 'archive'   ;-)

2005-01-15 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
    * ADD DicomDir, DicomDirPatient, DicomDirStudy, DicomDirSerie, DicomDirImage
	       related methods, in order not to expose internal mechanisms
        InitTraversal();
        GetNextEntry();